# libnugrid

./: .gitignore  .grid.cpp.swp  .grid.h.swp  .travis.yml  Makefile  README.md  grid.cpp  grid.h  main  timeline.md
libnugrid/: CMakeLists.txt  CMakeLists.txt.old  Makefile  grid.cpp  log  nugrid.cpp  nugrid.h  pynugrid.cpp
libnugrid/lebedev_grids/: lebedevData.h  lebedevTxtToC.py
libnugrid/tests/: Makefile  test  test.cpp
libnugrid/tests/include/: nugrid.h
tests/: Makefile  libnugrid.h  main  main.cpp
